add tests and day04